# setuptools-wrapper

./: README.md  manifest.yaml  pyproject.toml  setup.py
.github/workflows/: python-package.yml
local/configs/: package.yaml  python.yaml
local/templates/: README.md.j2
local/variables/: package.yaml
setuptools_wrapper/: __init__.py  dev_requirements.txt  setup.py
tasks/: conf.py
tests/: test_setup.py
