[build-system]
requires = ["setuptools", "wheel", "trove-classifiers"]

[project]
name = "setuptools-wrapper"
version = "0.1.1"
description = "A simple interface to setuptools's setup function."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
maintainers = [
  {name = "Vaughn Kottler", email = "vaughnkottler@gmail.com"}
]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "setuptools"
]

[project.optional-dependencies]
test = [
  "types-setuptools",
  "vcorelib",
  "pylint",
  "flake8",
  "pytest",
  "pytest-cov",
  "mypy",
  "black",
  "isort"
]
